--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,3 +2,9 @@ set-option -g default-terminal "screen-256color"
 set -sg escape-time 0
 set-window-option -g xterm-keys on
 bind-key k kill-session
+
+set -g status-bg black
+
+# https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
+set-window-option -g window-status-current-format '#[bg=colour16] #[fg=white,bold]** #{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(echo "#{pane_current_path}" | rev | cut -d'/' -f-3 | rev) #[fg=white]** |'
+set-window-option -g window-status-format '#[bg=black] #[fg=white,bold]#{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(echo "#{pane_current_path}" | rev | cut -d'/' -f-3 | rev) #[fg=white]|'
