--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set-option -g default-terminal "screen-256color"
+set-option -g default-shell /usr/bin/zsh
 set -sg escape-time 0
 set-window-option -g xterm-keys on
 bind-key k kill-session
