Added missing parts to .i3/config

--- a/.i3/config
+++ b/.i3/config
@@ -167,3 +167,101 @@ bindsym $mod+0 workspace $workspace10
 
 bindsym $mod+minus workspace $workspace11
 bindsym $mod+equal workspace 12
+
+# move focused container to workspace
+bindsym $mod+Shift+1 move container to workspace $workspace1
+bindsym $mod+Shift+2 move container to workspace $workspace2
+bindsym $mod+Shift+3 move container to workspace $workspace3
+bindsym $mod+Shift+4 move container to workspace $workspace4
+bindsym $mod+Shift+5 move container to workspace $workspace5
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+F2 move container to workspace $workspace_f2
+bindsym $mod+Shift+F3 move container to workspace $workspace_f3
+bindsym $mod+Shift+F5 move container to workspace $workspace_f5
+bindsym $mod+Shift+F6 move container to workspace $workspace_f6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace $workspace9
+bindsym $mod+Shift+F9 move container to workspace $workspace_f9
+bindsym $mod+Shift+0 move container to workspace $workspace10
+
+bindsym $mod+Shift+minus move container to workspace $workspace11
+bindsym $mod+Shift+equal move container to workspace 12
+
+assign [class="brave"] $workspace4
+assign [class="Firefox"] $workspace4
+assign [class="Google-chrome"] $workspace4
+assign [class="Thunderbird"] $workspace5
+assign [class="whatsapp-desktop"] $workspace5
+assign [class="Eclipse"] $workspace_f6
+assign [class="Emacs"] $workspace_f2
+
+for_window [class="TeamViewer"] floating disable
+for_window [class="Eclipse"] floating disable
+for_window [class="Icedove"] floating disable
+for_window [class="libreoffice"] floating disable
+for_window [class="org-gov-serpro-pgddirf-Dirf"] floating disable
+
+# reload the configuration file
+bindsym $mod+Shift+c reload
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
+# exit i3 (logs you out of your X session)
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+# resize window (you can also use the mouse for that)
+mode "resize" {
+        # These bindings trigger as soon as you enter the resize mode
+
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
+
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
+
+        # back to normal: Enter or Escape
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+
+bindsym $mod+r mode "resize"
+#
+# Widow Colours
+#                         border  background text    indicator
+  client.focused          $base01 $base01    $base07 $base0F
+  client.focused_inactive $base02 $base02    $base03 $base0F
+  client.unfocused        $base02 $base02    $base03 $base0F
+  client.urgent           $base02 $base08    $base00 $base0F
+
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
+bar {
+#        status_command i3status
+        status_command i3blocks
+
+		position top
+
+    separator_symbol " "
+	font pango:SFNS Display, FontAwesome 11
+	# font pango:Font Awesome 5 Free Regular 8
+
+colors {
+      separator $base03
+      background $base01
+      statusline $base05
+#                        border  background text
+      focused_workspace  $base01 $base01    $base07
+      active_workspace   $base01 $base02    $base03
+      inactive_workspace $base01 $base01    $base03
+      urgent_workspace   $base01 $base08    $base03
+    }
+}
