--- a/.i3/config
+++ b/.i3/config
@@ -77,7 +77,8 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -opacity 85 -bw 0 -bc "$base05" -bg "$base05" -fg "$base07" -hlbg "$base01" -hlfg "#9575cd"
+bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -opacity 85 -bw 0 -bc "$base05" \
+    -bg "$base05" -fg "$base07" -hlbg "$base01" -hlfg "#9575cd"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -207,7 +208,9 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. \
+    Do you really want to exit i3? This will end your X session.' \
+    -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
