--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/neomutt/submodules/mutt-colors-solarized"]
 	path = .config/neomutt/submodules/mutt-colors-solarized
 	url = https://github.com/altercation/mutt-colors-solarized
+[submodule ".config/neomutt/submodules/mutt-colors-neonwolf"]
+	path = .config/neomutt/submodules/mutt-colors-neonwolf
+	url = https://github.com/h3xx/mutt-colors-neonwolf
