--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,3 +11,10 @@ bind-key -n C-q send-prefix
 # https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
 set-window-option -g window-status-current-format '#[bg=colour16] #[fg=white,bold]** #{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(basename #{pane_current_path}) #[fg=white]** |'
 set-window-option -g window-status-format '#[bg=black] #[fg=white,bold]#{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(basename #{pane_current_path}) #[fg=white]|'
+
+# https://stackoverflow.com/q/30719042
+# smart pane switching with awareness of vim splits
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
