--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set-option -g default-terminal "screen-256color"
 set -sg escape-time 0
 set-window-option -g xterm-keys on
-bind-key k kill-session
+bind-key x kill-session
 
 set -g status-bg black
 
