--- a/.i3/config
+++ b/.i3/config
@@ -214,9 +214,9 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. \
-    Do you really want to exit i3? This will end your X session.' \
-    -b 'Yes, exit i3' 'i3-msg exit'"
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. \
+#     Do you really want to exit i3? This will end your X session.' \
+#     -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -278,12 +278,11 @@ colors {
 bindsym $mod+X mode "$mode_system"
 bindsym control+mod1+Delete mode "$mode_system"
 
-set $mode_system System (k) lock, (l) logout, (u) suspend, (h) hibernate, \
-(r) reboot, (s) shutdown
+set $mode_system System (c) lock, (o) logout
 
 mode "$mode_system" {
     # bindsym k exec --no-startup-id ~/.config/i3/scripts/i3exit.sh lock, mode "default"
-    bindsym l exec --no-startup-id ~/.i3/scripts/logout, mode "default"
+    bindsym o exec --no-startup-id ~/.i3/scripts/logout, mode "default"
     # bindsym u exec --no-startup-id ~/.config/i3/scripts/i3exit.sh suspend, mode "default"
     # bindsym h exec --no-startup-id ~/.config/i3/scripts/i3exit.sh hibernate, mode "default"
     # bindsym r exec --no-startup-id ~/.config/i3/scripts/i3exit.sh reboot, mode "default"
