--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,11 @@
 set-option -g default-terminal "screen-256color"
 set -sg escape-time 0
 set-window-option -g xterm-keys on
-bind-key x kill-session
+bind-key M-q kill-session
 
 set -g status-bg black
 
-bind-key -n C-\ send-prefix
+bind-key -n C-q send-prefix
 
 # https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
 set-window-option -g window-status-current-format '#[bg=colour16] #[fg=white,bold]** #{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(basename #{pane_current_path}) #[fg=white]** |'
