--- a/.i3/config
+++ b/.i3/config
@@ -282,6 +282,7 @@ set $mode_system System (c) lock, (o) logout
 
 mode "$mode_system" {
     # bindsym k exec --no-startup-id ~/.config/i3/scripts/i3exit.sh lock, mode "default"
+    bindsym c exec --no-startup-id ~/.i3/scripts/lock, mode "default"
     bindsym o exec --no-startup-id ~/.i3/scripts/logout, mode "default"
     # bindsym u exec --no-startup-id ~/.config/i3/scripts/i3exit.sh suspend, mode "default"
     # bindsym h exec --no-startup-id ~/.config/i3/scripts/i3exit.sh hibernate, mode "default"
