--- a/.i3/config
+++ b/.i3/config
@@ -71,7 +71,7 @@ hide_edge_borders both
 #gaps outer 0
 
 # start a terminal
-#bindsym $mod+Return exec i3-sensible-terminal  
+#bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec urxvt
 
 # kill focused window
@@ -79,8 +79,8 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -opacity 85 -bw 0 -bc "$base05" \
-    -bg "$base05" -fg "$base07" -hlbg "$base01" -hlfg "#9575cd"
+bindsym $mod+d exec rofi -show run
+bindsym $mod+g exec rofi -show window
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
