--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ bind-key -n C-q send-prefix
 # https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
 set-window-option -g window-status-current-format '#[bg=colour16] #[fg=white,bold]** #{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(basename #{pane_current_path}) #[fg=white]** |'
 set-window-option -g window-status-format '#[bg=black] #[fg=white,bold]#{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(basename #{pane_current_path}) #[fg=white]|'
+# https://github.com/syohex/emacs-emamux/
+# '#S' is session name, '#I' is window index, '#P' is pane index
+set-option -g status-right '#[bg=colour16] #[fg=white,bold][@#h #S:#I:#P]'
 
 # https://stackoverflow.com/q/30719042
 # smart pane switching with awareness of vim splits
