--- a/.i3/config
+++ b/.i3/config
@@ -73,7 +73,7 @@ hide_edge_borders both
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec /usr/local/bin/st
 
 # kill focused window
 bindsym $mod+Shift+q kill
