--- a/.i3/config
+++ b/.i3/config
@@ -296,3 +296,5 @@ mode "$mode_system" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
+
+exec_always hsetroot -cover ~/.local/share/wallpaper/current
