--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -3,16 +3,18 @@ set -sg escape-time 0
 set-window-option -g xterm-keys on
 bind-key M-q kill-session
 
-set -g status-bg black
-
 bind-key -n C-q send-prefix
 
 # https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
-set-window-option -g window-status-current-format '#[bg=colour16] #[fg=white,bold]** #{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(basename #{pane_current_path}) #[fg=white]** |'
-set-window-option -g window-status-format '#[bg=black] #[fg=white,bold]#{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(basename #{pane_current_path}) #[fg=white]|'
+set-window-option -g window-status-current-format '#[bg=white]#[fg=black,bold]#{window_index} \
+#[fg=green]#{pane_current_command} \
+#[fg=blue]#(basename #{pane_current_path})#[bg=black]#[fg=white,bold] |'
+set-window-option -g window-status-format '#[fg=white,bold]#{window_index} \
+#[fg=green]#{pane_current_command} \
+#[fg=blue]#(basename #{pane_current_path}) #[fg=white]|'
 # https://github.com/syohex/emacs-emamux/
 # '#S' is session name, '#I' is window index, '#P' is pane index
-set-option -g status-right '#[bg=colour16] #[fg=white,bold][@#h #S:#I:#P]'
+set-option -g status-right '#[bg=black] #[fg=white,bold][@#h #S:#P] %b %e %a %_Hh%M '
 
 # https://stackoverflow.com/q/30719042
 # smart pane switching with awareness of vim splits
