tmux: status bg color & format (no pane index)

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -3,6 +3,8 @@ set -sg escape-time 0
 set-window-option -g xterm-keys on
 bind-key M-q kill-session
 
+set -g status-bg black
+
 bind-key -n C-q send-prefix
 
 # https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
@@ -14,7 +16,7 @@ set-window-option -g window-status-format '#[fg=white,bold]#{window_index} \
 #[fg=blue]#(basename #{pane_current_path}) #[fg=white]|'
 # https://github.com/syohex/emacs-emamux/
 # '#S' is session name, '#I' is window index, '#P' is pane index
-set-option -g status-right '#[bg=black] #[fg=white,bold][@#h #S:#P] %b %e %a %_Hh%M '
+set-option -g status-right '#[bg=black] #[fg=white,bold][@#h #S] %b %e %a %_Hh%M '
 
 # https://stackoverflow.com/q/30719042
 # smart pane switching with awareness of vim splits
