--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -8,15 +8,15 @@ set -g status-bg black
 bind-key -n C-q send-prefix
 
 # https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
-set-window-option -g window-status-current-format '#[bg=white]#[fg=black,bold]#{window_index} \
+set-window-option -g window-status-current-format '#[fg=red]#{window_index} \
 #[fg=green]#{pane_current_command} \
-#[fg=blue]#(basename #{pane_current_path})#[bg=black]#[fg=white,bold] |'
-set-window-option -g window-status-format '#[fg=white,bold]#{window_index} \
-#[fg=green]#{pane_current_command} \
-#[fg=blue]#(basename #{pane_current_path}) #[fg=white]|'
+#[fg=blue]#(basename #{pane_current_path})#[fg=white] |'
+set-window-option -g window-status-format '#[fg=white]#{window_index} \
+#{pane_current_command} \
+#(basename #{pane_current_path}) |'
 # https://github.com/syohex/emacs-emamux/
 # '#S' is session name, '#I' is window index, '#P' is pane index
-set-option -g status-right '#[bg=black] #[fg=white,bold][@#h #S] %b %e %a %_Hh%M '
+set-option -g status-right '#[bg=black] #[fg=white][@#h #S] %b %e %a %0Hh%M '
 
 # https://stackoverflow.com/q/30719042
 # smart pane switching with awareness of vim splits
