--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -3,20 +3,23 @@ set -sg escape-time 0
 set-window-option -g xterm-keys on
 bind-key M-q kill-session
 
-set -g status-bg black
-
 bind-key -n C-q send-prefix
 
+set -g status-bg black
+
+gray="#aaaaaa"
+
 # https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
-set-window-option -g window-status-current-format '#[fg=red]#{window_index} \
-#[fg=green]#{pane_current_command} \
-#[fg=blue]#(basename #{pane_current_path})#[fg=white] |'
-set-window-option -g window-status-format '#[fg=white]#{window_index} \
-#{pane_current_command} \
-#(basename #{pane_current_path}) |'
+set-window-option -g window-status-current-format "#[fg=red,bold]#{window_index} \
+#[fg=green,none]#{pane_current_command} \
+#[fg=blue]#(basename #{pane_current_path})#[fg=white] "
+set-window-option -g window-status-format "#[fg=$gray,bold]#{window_index}\
+#[fg=white,none] #{pane_current_command} \
+#(basename #{pane_current_path}) "
 # https://github.com/syohex/emacs-emamux/
 # '#S' is session name, '#I' is window index, '#P' is pane index
-set-option -g status-right '#[bg=black] #[fg=white][@#h #S] %b %e %a %0Hh%M '
+set-option -g status-right "#[fg=white][@#h #[fg=cyan,bold]#S#[fg=white,none]] \
+%b %e %a %0Hh%M "
 
 # https://stackoverflow.com/q/30719042
 # smart pane switching with awareness of vim splits
