--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -9,7 +9,8 @@ set -g status-bg black
 
 gray="#aaaaaa"
 
-# https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
+# How to automatically rename tmux windows to the current directory
+# https://stackoverflow.com/a/35513050
 set-window-option -g window-status-current-format "#[fg=red,bold]#{window_index} \
 #[fg=green,none]#{pane_current_command} \
 #[fg=blue]#(basename #{pane_current_path})#[fg=white] "
@@ -28,4 +29,4 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# vim:ft=tmux
+# vim: ft=tmux
