youtube-dl format selection (various fallbacks)

--- a/mpv/dot-config/mpv/mpv.conf
+++ b/mpv/dot-config/mpv/mpv.conf
@@ -3,6 +3,6 @@ vo=gpu,
 sub-auto=fuzzy
 slang=en,ko,de,pt,es
 ao=pulse
-ytdl-format=137+140
+ytdl-format=137+140/22/136+140/135+140/18
 
 # vim:ft=conf
