MPV IPC: super + semicolon to cycle pause

--- a/mpv/dot-config/mpv/mpv.conf
+++ b/mpv/dot-config/mpv/mpv.conf
@@ -4,5 +4,6 @@ sub-auto=fuzzy
 slang=en,ko,de,pt,es
 ao=pulse
 ytdl-format=137+140/22/136+140/135+140/18
+input-ipc-server=/tmp/mpvsocket
 
 # vim:ft=conf
