Limiting subtitles to just English

--- a/mpv/dot-config/mpv/mpv.conf
+++ b/mpv/dot-config/mpv/mpv.conf
@@ -4,6 +4,7 @@ sub-auto=fuzzy
 slang=en,ko,de,pt,es
 ao=pulse
 ytdl-format=137+140/22/136+140/135+140/18
+ytdl-raw-options=write-sub=,sub-lang=en
 input-ipc-server=/tmp/mpvsocket
 
 # vim:ft=conf
