mpv: playlist information on the terminal

--- a/mpv/dot-config/mpv/mpv.conf
+++ b/mpv/dot-config/mpv/mpv.conf
@@ -1,3 +1,5 @@
+term-playing-msg="Now playing:\t${media-title}\nPlaylist:\t${playlist-pos-1}/${playlist-count}"
+no-keepaspect-window
 hwdec=auto-safe
 vo=gpu,
 sub-auto=fuzzy
