--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -1,6 +1,7 @@
 set-option -g default-terminal "screen-256color"
 set -sg escape-time 0
 set-window-option -g xterm-keys on
+setw -g mode-keys vi
 bind-key M-q kill-session
 
 bind-key -n C-q send-prefix
