tmux: last-window

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -33,4 +33,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Rebinding last-window, shadowed by select-pane -R
+bind b last-window
+
 # vim: ft=tmux
