--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -9,18 +9,19 @@ set -g status-bg black
 
 gray="#aaaaaa"
 
-# How to automatically rename tmux windows to the current directory
-# https://stackoverflow.com/a/35513050
 setw -g window-status-current-format "#[fg=red,bold]#{window_index} \
-#[fg=green,none]#{pane_current_command} \
-#[fg=blue]#(basename #{pane_current_path})#[fg=white] "
+#[fg=green,none]#{pane_current_command} [fg=blue]#W#[fg=white] "
 setw -g window-status-format "#[fg=$gray,bold]#{window_index}\
-#[fg=white,none] #{pane_current_command} \
-#(basename #{pane_current_path}) "
+#[fg=white,none] #{pane_current_command} #W "
 # https://github.com/syohex/emacs-emamux/
 # '#S' is session name, '#I' is window index, '#P' is pane index
 set -g status-right "#[fg=white][@#h #[fg=cyan,bold]#S#[fg=white,none]] \
 %b %e %a %0Hh%M "
+
+# How to automatically rename tmux windows to the current directory
+# https://stackoverflow.com/a/45010147
+setw -g automatic-rename on
+setw -g automatic-rename-format '#{b:pane_current_path}'
 
 bind-key R source-file ~/.tmux.conf \; \
     display-message "Configuration successfully reloaded!"
