tmux: how to run a command on all windows

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -23,6 +23,10 @@ set -g status-right "#[fg=white][@#h #[fg=cyan,bold]#S#[fg=white,none]] \
 setw -g automatic-rename on
 setw -g automatic-rename-format '#{b:pane_current_path}'
 
+# Run a commando on all windows
+# tmux list-windows -a -F "#S:#{window_index}" | \
+#     xargs -i{} tmux setw -t {} automatic-rename on
+
 bind-key R source-file ~/.tmux.conf \; \
     display-message "Configuration successfully reloaded!"
 bind-key M-q kill-session
