tmux: forgot # before fg styling

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -10,7 +10,7 @@ set -g status-bg black
 gray="#aaaaaa"
 
 setw -g window-status-current-format "#[fg=red,bold]#{window_index} \
-#[fg=green,none]#{pane_current_command} [fg=blue]#W#[fg=white] "
+#[fg=green,none]#{pane_current_command} #[fg=blue]#W#[fg=white] "
 setw -g window-status-format "#[fg=$gray,bold]#{window_index}\
 #[fg=white,none] #{pane_current_command} #W "
 # https://github.com/syohex/emacs-emamux/
