--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -14,10 +14,13 @@ setw -g window-status-current-format "#[fg=red,bold]#{window_index} \
 #[fg=green,none]#{pane_current_command} #[fg=blue]#W#[fg=white] "
 setw -g window-status-format "#[fg=$gray,bold]#{window_index}\
 #[fg=white,none] #{pane_current_command} #W "
-# https://github.com/syohex/emacs-emamux/
-# '#S' is session name, '#I' is window index, '#P' is pane index
+# No need to have date & time unless you're SSHing
+%if "${SSH_TTY}"
 set -g status-right "#[fg=white][@#h #[fg=cyan,bold]#S#[fg=white,none]] \
-%b %e %a %0Hh%M "
+%b %e %a %0H:%M "
+%else
+set -g status-right "#[fg=white][@#h #[fg=cyan,bold]#S#[fg=white,none]] "
+%endif
 
 # How to automatically rename tmux windows to the current directory
 # https://stackoverflow.com/a/45010147
