tmux.conf: a more accurate reload message

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -32,7 +32,7 @@ setw -g automatic-rename-format '#{b:pane_current_path}'
 #     xargs -i{} tmux setw -t {} automatic-rename on
 
 bind-key R source-file ~/.tmux.conf \; \
-    display-message "Configuration successfully reloaded!"
+    display-message "Configuration reloaded."
 bind-key M-q kill-session
 bind-key -n C-q send-prefix
 
