tmux: default-terminal LOCAL_TERM, undercurl
To get full terminal capabilities use LOCAL_TERM, if it's defined.
Terminal overrides to get undercurl working inside tmux.

Added another comment with a useful command.

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -1,5 +1,15 @@
 set -sg default-command ${SHELL}
+%if "${LOCAL_TERM}"
+set -sg default-terminal ${LOCAL_TERM}
+%else
 set -sg default-terminal screen-256color
+%endif
+# https://evantravers.com/articles/2021/02/05/curly-underlines-in-kitty-tmux-neovim/
+  # undercurl support
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+ # underscore colours - needs tmux-3.0
+set -as terminal-overrides \
+',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 set -sg escape-time 0
 setw -g xterm-keys on
 setw -g mode-keys vi
@@ -30,6 +40,8 @@ setw -g automatic-rename-format '#{b:pane_current_path}'
 # Run a commando on all windows
 # tmux list-windows -a -F "#S:#{window_index}" | \
 #     xargs -i{} tmux setw -t {} automatic-rename on
+# tmux list-windows -a -F "#S:#{window_index}" | \
+#     xargs -i{} tmux send -t {} rehash Enter
 
 bind-key R source-file ~/.tmux.conf \; \
     display-message "Configuration reloaded."
