tmux: How do I change the starting directory of a tmux session?

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -43,6 +43,10 @@ setw -g automatic-rename-format '#{b:pane_current_path}'
 # tmux list-windows -a -F "#S:#{window_index}" | \
 #     xargs -i{} tmux send -t {} rehash Enter
 
+# https://stackoverflow.com/a/68838778
+# How do I change the starting directory of a tmux session?
+# :attach-session -c "#{pane_current_path}"
+
 bind-key R source-file ~/.tmux.conf \; \
     display-message "Configuration reloaded."
 bind-key M-q kill-session
