foot.ini: start maximized, no client side decorations

--- a/foot/dot-config/foot/foot.ini
+++ b/foot/dot-config/foot/foot.ini
@@ -24,7 +24,7 @@ font=Iosevka Term:size=12
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
-# initial-window-mode=windowed
+initial-window-mode=maximized
 # pad=0x0                             # optionally append 'center'
 # resize-delay-ms=100
 
@@ -137,7 +137,7 @@ bright6=    93a1a1
 bright7=    fdf6e3
 
 [csd]
-# preferred=server
+preferred=none
 # size=26
 # font=<primary font>
 # color=<foreground color>
