--- a/foot/dot-config/foot/foot.ini
+++ b/foot/dot-config/foot/foot.ini
@@ -171,8 +171,8 @@ preferred=none
 # pipe-visible=[sh -c "xurls | fuzzel | xargs -r firefox"] none
 # pipe-scrollback=[sh -c "xurls | fuzzel | xargs -r firefox"] none
 # pipe-selected=[xargs -r firefox] none
-# show-urls-launch=Control+Shift+u
-# show-urls-copy=none
+show-urls-launch=Control+Shift+l
+show-urls-copy=Menu
 # show-urls-persistent=none
 # prompt-prev=Control+Shift+z
 # prompt-next=Control+Shift+x
