--- a/foot/dot-config/foot/foot.ini
+++ b/foot/dot-config/foot/foot.ini
@@ -25,7 +25,7 @@ font=Iosevka Term:size=12
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 initial-window-mode=maximized
-pad=2x2                             # optionally append 'center'
+pad=2x2 center
 # resize-delay-ms=100
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
