--- a/foot/dot-config/foot/foot.ini
+++ b/foot/dot-config/foot/foot.ini
@@ -65,6 +65,9 @@ font=Iosevka Term:size=12
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
 
+# solarized-dark
+color= 002b36 93a1a1
+
 [mouse]
 # hide-when-typing=no
 # alternate-scroll-mode=yes
@@ -112,6 +115,26 @@ font=Iosevka Term:size=12
 # search-box-no-match=<regular0> <regular1>  # black-on-red
 # search-box-match=<regular0> <regular3>     # black-on-yellow
 # urls=<regular3>
+
+# solarized-dark
+background= 002b36
+foreground= 839496
+regular0=   073642
+regular1=   dc322f
+regular2=   859900
+regular3=   b58900
+regular4=   268bd2
+regular5=   d33682
+regular6=   2aa198
+regular7=   eee8d5
+bright0=    002b36
+bright1=    cb4b16
+bright2=    586e75
+bright3=    657b83
+bright4=    839496
+bright5=    6c71c4
+bright6=    93a1a1
+bright7=    fdf6e3
 
 [csd]
 # preferred=server
