foot.ini: hide cursor when typing

--- a/foot/dot-config/foot/foot.ini
+++ b/foot/dot-config/foot/foot.ini
@@ -69,7 +69,7 @@ font=Iosevka Term:size=12
 color= 002b36 93a1a1
 
 [mouse]
-# hide-when-typing=no
+hide-when-typing=yes
 # alternate-scroll-mode=yes
 
 [colors]
