Default hwdec and vo are fine (NVIDIA?), no pulseaudio
Wayland uses pipewire.

--- a/mpv/dot-config/mpv/mpv.conf
+++ b/mpv/dot-config/mpv/mpv.conf
@@ -1,12 +1,9 @@
 term-playing-msg="Now playing:\t${media-title}\nPlaylist:\t${playlist-pos-1}/${playlist-count}"
 title="${media-title} (${playlist-pos-1}/${playlist-count})"
 no-keepaspect-window
-hwdec=auto-safe
-vo=gpu,
 sub-auto=fuzzy
 slang=en,ko,de,pt,es
-ao=pulse
-script-opts=ytdl_hook-ytdl_path=/usr/local/bin/yt-dlp
+# script-opts=ytdl_hook-ytdl_path=/usr/local/bin/yt-dlp
 ytdl-format=137+140/22/136+140/135+140/134+140/18/0
 ytdl-raw-options=write-sub=,sub-lang=en
 input-ipc-server=/tmp/mpvsocket
