mpv: window resize shortcuts
https://www.reddit.com/r/mpv/comments/ait0nt/bind_hotkeys_for_resizing_the_window/?rdt=44143

--- a/mpv/dot-config/mpv/input.conf
+++ b/mpv/dot-config/mpv/input.conf
@@ -1,3 +1,6 @@
+Ctrl+1 add window-scale -0.0625
+Ctrl+2 set window-scale 1.0
+Ctrl+3 add window-scale +0.0625
 Q quit
 q quit-watch-later
 \ vf toggle hflip
