--- a/mpv/dot-config/mpv/input.conf
+++ b/mpv/dot-config/mpv/input.conf
@@ -2,6 +2,7 @@ Ctrl+1 set window-scale 1.0
 Ctrl+2 set window-scale 2.0
 Ctrl+3 set window-scale 3.0
 Ctrl+4 set window-scale 4.0
+# n script-binding bindings/playlist_next_watch_later
 Q quit
 q quit-watch-later
 \ vf toggle hflip
