mpv: filename as title

--- a/mpv/dot-config/mpv/mpv.conf
+++ b/mpv/dot-config/mpv/mpv.conf
@@ -1,5 +1,5 @@
 term-playing-msg="Now playing:\t${media-title}\nPlaylist:\t${playlist-pos-1}/${playlist-count}"
-title="${media-title} (${playlist-pos-1}/${playlist-count})"
+title=${filename}
 no-keepaspect-window
 sub-auto=fuzzy
 slang=en,ko,de,pt,es
