vdpau-copy works for PopOS with NVIDIA

--- a/mpv/dot-config/mpv/mpv.conf
+++ b/mpv/dot-config/mpv/mpv.conf
@@ -1,3 +1,5 @@
+# vdpau-copy works for PopOS with NVIDIA
+# hwdec=vdpau-copy
 term-playing-msg="Now playing:\t${media-title}\nPlaylist:\t${playlist-pos-1}/${playlist-count}"
 title=${filename}
 no-keepaspect-window
